--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
-title: Jennifer Smith Analytics Projects # your name (or website title) here
-logo: "/images/Profile Pic 2022.jpg" # your photo (or logo) here
+title: Jennifer Smith # your name (or website title) here
+logo: "/images/Profile_Pic_Circle.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
-  <br><br>
-  Second description 
+  Analytics projects 
   <br><br>
   <a href="https://www.linkedin.com/in/jennifersmithmequon/">View My LinkedIn Profile</a> 
   
