--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Jennifer Smith # your name (or website title) here
 logo: "/images/Profile_Pic_Circle.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  A collection of analytics projects 
+  ##### A collection of analytics projects 
   <br><br>
-  Master of Science, Business Analytics (MSBA)
+  Master of Science, Business Analytics
   Drake University
   December 2022 graduation
   <br><br>
