--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
 title: Jennifer Smith # your name (or website title) here
 logo: "/images/Profile_Pic_Circle.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  ##### A collection of analytics projects 
+  A collection of analytics projects 
   <br><br>
   Master of Science, Business Analytics
+  <br>
   Drake University
+  <br>
   December 2022 graduation
   <br><br>
   <a href="https://www.linkedin.com/in/jennifersmithmequon/">LinkedIn</a> 
