--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:  Jennifer Smith # your name (or website title) here
-logo: "/images/Profile_Pic_Circle.jpg" # your photo (or logo) here
+logo: "/images/Profile1Round.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   A collection of analytics projects 
