--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:<pre>   Jennifer Smith # your name (or website title) here
+title:  Jennifer Smith # your name (or website title) here
 logo: "/images/Profile2Round.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
