--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: <p align="center"> Jennifer Smith # your name (or website title) here
 logo: "/images/Profile2Round.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
+  <p align="center">
   <br><br>
   A collection of analytics projects 
   <br><br>
