--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/Profile2Round.jpg" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <p align="center">
   <br><br>
-  A collection of analytics projects 
+  Data Analytics, Business Intelligence, Data Visualization
   <br><br>
   Master of Science, Business Analytics
   <br>
