--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   December 2022 graduation
   <br><br>
   <a href="https://www.linkedin.com/in/jennifersmithmequon/">LinkedIn</a> 
+  <br>
+   <a href="jensmith0101@gmail.com">Email</a>  
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
